# pdf-tools

./: .gitignore  CODEBUDDY.md  pyproject.toml  requirements.txt
pdf_tools/: __init__.py  __main__.py  converter.py  gui.py  gui_main.py
pdf_tools/pages/: pdf_compress.py  pdf_encrypt.py  pdf_merge.py  pdf_split.py  pdf_to_excel.py  pdf_to_image.py  pdf_to_ppt.py  pdf_to_word.py
scripts/: build_linux.sh  gen_icon.py  svg_to_icons.py
