[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "Convert PDF to Word (DOCX) using pdf2docx"
requires-python = ">=3.12"
dependencies = ["pdf2docx"]

[project.scripts]
pdf-tools = "pdf_tools.__main__:main"
